--- a/templates/catalog/index.html
+++ b/templates/catalog/index.html
@@ -1,35 +1,68 @@
+{% extends 'catalog/base.html' %}
+
 {% load static %}
 
-<!doctype html>
-<html lang="en">
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% block title %}Local Library{% endblock %}
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+{% block body %}
+    <div class="container">
+        <div class="row mt-4">
+            <div class="col-lg-3  col-md-3 col-sm-12">
+                <table class="table table-bordered">
+                    <thead>
+                    </thead>
+                    <tbody>
+                    <td>Authors</td>
+                    <tr>
+                        <td><a href="{% url 'index' %}">Home</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="{% url 'all_books' %}">All books</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="{% url 'all-authors' %}">All authors</a></td>
+                    </tr>
 
-    <title>Local Library</title>
-    <link rel="stylesheet" href="{% static 'css/index.css' %}">
-</head>
-<body>
-<div class="container">
-    <p class="start">Locl Library</p>
-</div>
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-lg-7 col-md-12 col-sm-12">
+                <div class="alert alert-primary" role="alert">
+                    Local library has following records.
+                </div>
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Book name(s)</th>
+                        <th scope="col">Availibility</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Total books</td>
+                        <td>{{ books|length }}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Total copies</td>
+                        <td>{{ total_copies|length }}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td>Available copies</td>
+                        <td>{{ available_books }}</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">4</th>
+                        <td>Authors</td>
+                        <td>{{ authors|length }}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 
-<!-- Optional JavaScript; choose one of the two! -->
-
-<!-- Option 1: Bootstrap Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-        crossorigin="anonymous"></script>
-
-<!-- Option 2: Separate Popper and Bootstrap JS -->
-<!--
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
--->
-</body>
-</html>
+{% endblock %}
