--- a/templates/catalog/base.html
+++ b/templates/catalog/base.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-    <title>Local Library</title>
+    <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
 </head>
 <body>
@@ -20,53 +20,11 @@
 <div class="container mt-3">
     <div class="alert alert-success" role="alert">
         <h4 class="alert-heading">Library management System</h4>
+        <p>A basic Django application made for entire library management.</p>
     </div>
 </div>
 
-<div class="container">
-    <div class="row mt-4">
-        <div class="col-sm-3 col-md-3 col-lg-3">
-            <table class="table table-bordered">
-                <thead>
-                </thead>
-                <tbody>
-                {% for author in authors %}
-                    <tr>
-                        <td>{{ author.first_name }} {{ author.last_name }}</td>
-                    </tr>
-                {% endfor %}
-                <tr>
-                    <td>Jacob</td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="col-sm-9 col-md-6 col-lg-6">
-            <div class="alert alert-primary" role="alert">
-                Total books: {{ books|length }}
-            </div>
-            <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Book name(s)</th>
-                    <th scope="col">Availibility</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for avail in available_books %}
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>{{ avail.book }}</td>
-                        <td>{{ avail.status }}</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
-
+{% block body %}{% endblock %}
 
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
