Change path name to 'books', 'authors'

--- a/templates/catalog/all_authors.html
+++ b/templates/catalog/all_authors.html
@@ -17,10 +17,10 @@
                         <td><a href="{% url 'index' %}">Home</a></td>
                     </tr>
                     <tr>
-                        <td><a href="{% url 'all_books' %}">All books</a></td>
+                        <td><a href="{% url 'books' %}">All books</a></td>
                     </tr>
                     <tr>
-                        <td><a href="{% url 'all-authors' %}">All authors</a></td>
+                        <td><a href="{% url 'authors' %}">All authors</a></td>
                     </tr>
 
                     </tbody>
