Create new book_detail.html for DetailView

--- a/templates/catalog/book_detail.html
+++ b/templates/catalog/book_detail.html
@@ -28,7 +28,7 @@
             </div>
             <div class="col-lg-7 col-md-12 col-sm-12">
                 <div class="alert alert-primary" role="alert">
-                    These are {{ total_books_demo }} number of books.
+                    {{ book.title }}
                 </div>
                 <table class="table">
                     <thead>
