--- a/templates/catalog/book_detail.html
+++ b/templates/catalog/book_detail.html
@@ -4,6 +4,9 @@
 
 {% block title %}Books - Local Library{% endblock %}
 
+{% block style %}
+{% endblock %}
+
 {% block body %}
     <div class="container">
         <div class="row mt-4">
@@ -26,26 +29,62 @@
                     </tbody>
                 </table>
             </div>
+
             <div class="col-lg-7 col-md-12 col-sm-12">
                 <div class="alert alert-primary" role="alert">
-                    {{ book.title }}
+                    <h5 style="color: black">{{ book.title }}</h5>
                 </div>
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Title of the book</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for book in book_instance %}
-                    <tr>
-                        <th scope="row">{{ forloop.counter }}</th>
-                        <td><a href="{{  book.get_absolute_url }}">{{ book.title }}</a><br> - By: {{ book.author }}</td>
-                    </tr>
+
+
+                <ol class="list-group list-group">
+                    <li class="list-group-item d-flex justify-content-between align-items-start">
+                        <div class="ms-2 me-auto">
+                            <div class="fw-bold">Summary</div>
+                            {{ book.summary }}
+                        </div>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-start">
+                        <div class="ms-2 me-auto">
+                            <div class="fw-bold">ISBN</div>
+                            {{ book.isbn }}
+                        </div>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-start">
+                        <div class="ms-2 me-auto">
+                            <div class="fw-bold">Language</div>
+                            {{ book.language }}
+                        </div>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-start">
+                        <div class="ms-2 me-auto">
+                            <div class="fw-bold">Genre</div>
+                            {{ book.display_genre }}
+                        </div>
+                    </li>
+                </ol>
+
+
+                <h5 class="mt-5">Copies availability:</h5>
+                <ul class="list-group list-group-flush">
+
+                    {% for copy in book.bookinstance_set.all %}
+                        <li class="list-group-item">
+                            <span class="{% if copy.status == 'a' %}text-success{% elif copy.status == 'm' %}text-danger{% else %}text-warning{% endif %}">{{ copy.get_status_display }}</span><br>
+
+                            {% if copy.status != 'a' %}
+                                <span><strong>Due to be returned: </strong>{{ copy.due_back }}<br></span>
+                            {% endif %}
+                            <span><strong>Imprint: </strong>{{ copy.imprint }}<br></span>
+                            <span><strong>ID: </strong>{{ copy.id }}</span>
+
+                        </li>
+
+
+
                     {% endfor %}
-                    </tbody>
-                </table>
+
+                </ul>
+
             </div>
         </div>
     </div>
