--- a/templates/catalog/all_books.html
+++ b/templates/catalog/all_books.html
@@ -5,49 +5,24 @@
 {% block title %}Books - Local Library{% endblock %}
 
 {% block body %}
-    <div class="container">
-        <div class="row mt-4">
-            <div class="col-lg-3  col-md-3 col-sm-12">
-                <table class="table table-bordered">
-                    <thead>
-                    </thead>
-                    <tbody>
-                    <td>Books</td>
-                    <tr>
-                        <td><a href="{% url 'index' %}">Home</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="{% url 'books' %}">All books</a></td>
-                    </tr>
-                    <tr>
-                        <td><a href="{% url 'authors' %}">All authors</a></td>
-                    </tr>
-
-                    </tbody>
-                </table>
-            </div>
-            <div class="col-lg-7 col-md-12 col-sm-12">
-                <div class="alert alert-primary" role="alert">
-                    These are {{ total_books_demo }} number of books.
-                </div>
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Title of the book</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for book in book_instance %}
-                    <tr>
-                        <th scope="row">{{ forloop.counter }}</th>
-                        <td><a href="{{  book.get_absolute_url }}">{{ book.title }}</a><br> - By: {{ book.author }}</td>
-                    </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        </div>
+    <div class="alert alert-primary" role="alert">
+        These are {{ total_books_demo }} number of books.
     </div>
-
+    <table class="table">
+        <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Title of the book</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for book in book_instance %}
+            <tr>
+                <th scope="row">{{ forloop.counter }}</th>
+                <td><a href="{{ book.get_absolute_url }}">{{ book.title }}</a><br> - By: {{ book.author }}
+                </td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
