--- a/templates/catalog/base.html
+++ b/templates/catalog/base.html
@@ -24,7 +24,37 @@
     </div>
 </div>
 
-{% block body %}{% endblock %}
+
+<div class="container">
+    <div class="row mt-4">
+        <div class="col-lg-3  col-md-3 col-sm-12">
+            <table class="table table-bordered">
+                <thead>
+                </thead>
+                <tbody>
+                <td>Books</td>
+                <tr>
+                    <td><a href="{% url 'index' %}">Home</a></td>
+                </tr>
+                <tr>
+                    <td><a href="{% url 'books' %}">All books</a></td>
+                </tr>
+                <tr>
+                    <td><a href="{% url 'authors' %}">All authors</a></td>
+                </tr>
+
+                </tbody>
+            </table>
+        </div>
+
+        <div class="col-lg-7 col-md-12 col-sm-12">
+
+            {% block body %}{% endblock %}
+
+        </div>
+    </div>
+</div>
+
 
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
