--- a/templates/catalog/all_books.html
+++ b/templates/catalog/all_books.html
@@ -5,6 +5,42 @@
 {% block title %}Books - Local Library{% endblock %}
 
 {% block body %}
+    {% block pagination %}
+        {% if is_paginated %}
+            <nav class="mt-3" aria-label="Page navigation example">
+                <ul class="pagination pagination-sm justify-content-center">
+                    <li class="page-item">
+                        {% if page_obj.has_previous %}
+                            <a class="page-link" href="{{ requeset.path }}?page={{ page_obj.previous_page_number }}"
+                               aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                            </a>
+                        {% else %}
+                            <a class="page-link" aria-label="Previous">
+                                <span style="color:grey" aria-hidden="true">&laquo;</span>
+                            </a>
+                        {% endif %}
+                    </li>
+                    <li class="page-item"><a class="page-link">{{ page_obj.number }}</a></li>
+                    <li class="page-item"><a class="page-link">of</a></li>
+                    <li class="page-item"><a class="page-link">{{ page_obj.paginator.num_pages }}</a></li>
+                    <li class="page-item">
+                        {% if page_obj.has_next %}
+                            <a class="page-link" href="{{ request.path }}?page={{ page_obj.next_page_number }}"
+                               aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                            </a>
+                        {% else %}
+                            <a class="page-link" aria-label="Next">
+                                <span style="color: grey" aria-hidden="true">&raquo;</span>
+                            </a>
+                        {% endif %}
+                    </li>
+                </ul>
+            </nav>
+        {% endif %}
+    {% endblock %}
+
     <div class="alert alert-primary" role="alert">
         These are {{ total_books_demo }} number of books.
     </div>
@@ -25,4 +61,5 @@
         {% endfor %}
         </tbody>
     </table>
+
 {% endblock %}
