--- a/templates/catalog/base.html
+++ b/templates/catalog/base.html
@@ -14,6 +14,12 @@
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
 </head>
+<style>
+    a{
+        text-decoration: none;
+    }
+    {% block style %}{% endblock %}
+</style>
 <body>
 
 
