Add Author name below book title

--- a/templates/catalog/book_detail.html
+++ b/templates/catalog/book_detail.html
@@ -11,8 +11,9 @@
     <div class="alert alert-primary" role="alert">
         <h5 style="color: black">{{ book.title }}</h5>
     </div>
+    <span style="color:yellowgreen" class="p-3"> By: {{ book.author }}</span>
 
-    <ol class="list-group list-group">
+    <ol class="pt-3 list-group list-group">
         <li class="list-group-item d-flex justify-content-between align-items-start">
             <div class="ms-2 me-auto">
                 <div class="fw-bold">Summary</div>
