--- a/templates/catalog/all_authors.html
+++ b/templates/catalog/all_authors.html
@@ -5,9 +5,46 @@
 {% block title %}Authors - Local Library{% endblock %}
 
 {% block body %}
+
     <div class="alert alert-primary" role="alert">
-        Local library has following records.
+        Local library has following records about Authors.
     </div>
+
+    {% block pagination %}
+        {% if is_paginated %}
+            <nav class="mt-3" aria-label="Page navigation example">
+                <ul class="pagination pagination-sm justify-content-center">
+                    <li class="page-item">
+                        {% if page_obj.has_previous %}
+                            <a class="page-link" href="{{ requeset.path }}?page={{ page_obj.previous_page_number }}"
+                               aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                            </a>
+                        {% else %}
+                            <a class="page-link" aria-label="Previous">
+                                <span style="color:grey" aria-hidden="true">&laquo;</span>
+                            </a>
+                        {% endif %}
+                    </li>
+                    <li class="page-item"><a class="page-link">{{ page_obj.number }}</a></li>
+                    <li class="page-item"><a class="page-link">of</a></li>
+                    <li class="page-item"><a class="page-link">{{ page_obj.paginator.num_pages }}</a></li>
+                    <li class="page-item">
+                        {% if page_obj.has_next %}
+                            <a class="page-link" href="{{ request.path }}?page={{ page_obj.next_page_number }}"
+                               aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                            </a>
+                        {% else %}
+                            <a class="page-link" aria-label="Next">
+                                <span style="color: grey" aria-hidden="true">&raquo;</span>
+                            </a>
+                        {% endif %}
+                    </li>
+                </ul>
+            </nav>
+        {% endif %}
+    {% endblock %}
     <table class="table">
         <thead>
         <tr>
@@ -20,10 +57,12 @@
         {% for author in authors %}
             <tr>
                 <th scope="row">{{ forloop.counter }}</th>
-                <td><a href="{% url 'author-detail' author.last_name author.id %}">{{ author.first_name }} {{ author.last_name }}</a> - <small>({{ author.date_of_birth }})</small></td>
+                <td>
+                    <a href="{% url 'author-detail' author.last_name author.id %}">{{ author.first_name }} {{ author.last_name }}</a>
+                    - <small>({{ author.date_of_birth }})</small></td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-
+<br><br><br>
 {% endblock %}
