--- a/templates/catalog/author_detail.html
+++ b/templates/catalog/author_detail.html
@@ -11,7 +11,7 @@
     <div class="alert alert-primary" role="alert">
         <h5 style="color: black">{{ author.first_name }} {{ author.last_name }}</h5>
     </div>
-    <small>{{ author.date_of_birth }}</small>
+    <small class="p-3">{{ author.date_of_birth }}</small>
 
     <ol class="list-group list-group mt-3">
 
