--- a/templates/catalog/base.html
+++ b/templates/catalog/base.html
@@ -15,9 +15,19 @@
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
 </head>
 <style>
-    a{
+    a {
         text-decoration: none;
     }
+
+    .footer {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        background-color: lightblue;
+        color: white;
+        text-align: center;
+
     {% block style %}{% endblock %}
 </style>
 <body>
@@ -56,12 +66,18 @@
         <div class="col-lg-7 col-md-12 col-sm-12">
 
             {% block body %}{% endblock %}
-
         </div>
     </div>
 </div>
 
 
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    © 2020 Copyright:
+    <a class="text-dark" href="https://library14app.heroku.com">librarymanagement.com</a>
+  </div>
+  <!-- Copyright -->
+</footer>
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
