--- a/templates/catalog/all_authors.html
+++ b/templates/catalog/all_authors.html
@@ -56,7 +56,7 @@
         <tbody>
         {% for author in authors %}
             <tr>
-                <th scope="row">{{ forloop.counter }}</th>
+                <th scope="row">-</th>
                 <td>
                     <a href="{% url 'author-detail' author.last_name author.id %}">{{ author.first_name }} {{ author.last_name }}</a>
                     - <small>({{ author.date_of_birth }})</small></td>
