--- a/templates/catalog/base.html
+++ b/templates/catalog/base.html
@@ -58,6 +58,18 @@
                 <tr>
                     <td><a href="{% url 'authors' %}">All authors</a></td>
                 </tr>
+                {% if not user.is_authenticated %}
+                    <tr>
+                        <td><a href="{% url 'login' %}">Login</a></td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td><a href="{% url 'login' %}"><span style="color: green">{{ user.username|capfirst }}</span></a><br>
+                         <li><a style="font-size: 16px" href="#">Profile</a></li>
+                         <li><a style="font-size: 16px" href="{% url 'logout' %}">Logout</a></li></td>
+                    </tr>
+                {% endif %}
+
 
                 </tbody>
             </table>
@@ -71,12 +83,12 @@
 </div>
 
 
-  <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+<!-- Copyright -->
+<div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
     © 2020 Copyright:
     <a class="text-dark" href="https://library14app.heroku.com">librarymanagement.com</a>
-  </div>
-  <!-- Copyright -->
+</div>
+<!-- Copyright -->
 </footer>
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
