Add password reset feature

--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -7,15 +7,14 @@
 {% block body %}
 
     <div class="alert alert-primary" role="alert">
-        Reset password email sent.
+        Your password was successfully completed.
     </div>
 
     <table class="table">
         <thead>
         <tr>
             <th scope="col">#</th>
-            <th scope="col">We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder.
-            If you have successfully reset your password, <a href="{% url 'login' %}">login here</a>.</th>
+            <th scope="col">Your password has been sucessfully changed. Now please <a href="{% url 'login' %}">login</a> to continue.</th>
         </tr>
         </thead>
     </table>
