--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -2,25 +2,59 @@
 
 {% load static %}
 
-{% block title %}Reset password sent - Local Library{% endblock %}
+{% block title %}Change password - Local Library{% endblock %}
 
 {% block body %}
 
     <div class="alert alert-primary" role="alert">
-        Reset password email sent.
+        Enter new password to continue changing password!
     </div>
 
     <table class="table">
         <thead>
         <tr>
             <th scope="col">#</th>
-            <th scope="col">We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder.
-            If you have successfully reset your password, <a href="{% url 'login' %}">login here</a>.</th>
+            <th scope="col">Enter passwords for your account :-</th>
         </tr>
         </thead>
     </table>
 
+    {% if validlink %}
+
+        <div class="p-1 alert alert-warning alert-dismissible fade show" role="alert">
+            <div style="width:95%"><strong>Please enter (and confirm) your new password.</strong></div>
+            <button type="button" class="p-2 btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+
+
+        <form action="" method="post">
+            {% csrf_token %}
+            <span>{{ form.new_password1.errors }}</span>
+            <label for="id_new_password1">New password:</label>
+            <span id="input">{{ form.new_password1 }}</span>
+            <br>
+            <span>{{ form.new_password2.errors }}</span>
+            <label for="id_new_password2">Confirm password:</label>
+            <span id="input">{{ form.new_password2 }}</span>
+            <br>
+            <input class="btn btn-primary mt-1" type="submit" value="Change password">
+
+
+        </form>
+    {% else %}
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">#</th>
+                <p>Password reset failed</p>
+                <th scope="col">The password reset link was invalid, possibly because it has already been used. Please
+                    request a new password
+                    reset.
+                </th>
+            </tr>
+            </thead>
+        </table>
+    {% endif %}
 
     <br><br><br><br>
-    <br><br>
 {% endblock %}
