--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -2,19 +2,20 @@
 
 {% load static %}
 
-{% block title %}Logged out - Local Library{% endblock %}
+{% block title %}Reset password sent - Local Library{% endblock %}
 
 {% block body %}
 
     <div class="alert alert-primary" role="alert">
-        You are successfully logged out of your account.
+        Reset password email sent.
     </div>
 
     <table class="table">
         <thead>
         <tr>
             <th scope="col">#</th>
-            <th scope="col">If you want to login in, <a href="{% url 'login' %}">click here</a>.</th>
+            <th scope="col">We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder.
+            If you have successfully reset your password, <a href="{% url 'login' %}">login here</a>.</th>
         </tr>
         </thead>
     </table>
