--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -2,20 +2,23 @@
 
 {% load static %}
 
-{% block title %}Reset password sent - Local Library{% endblock %}
+{% block title %}Password link - Local Library{% endblock %}
 
 {% block body %}
 
     <div class="alert alert-primary" role="alert">
-        Reset password email sent.
+        Follow the link below.
     </div>
 
     <table class="table">
         <thead>
         <tr>
             <th scope="col">#</th>
-            <th scope="col">We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder.
-            If you have successfully reset your password, <a href="{% url 'login' %}">login here</a>.</th>
+            <th scope="col">
+                Someone asked for password reset for email {{ email }}. Follow the link below:
+{{ protocol}}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+
+            </th>
         </tr>
         </thead>
     </table>
