--- a/templates/catalog/borrowed_books.html
+++ b/templates/catalog/borrowed_books.html
@@ -2,16 +2,30 @@
 
 {% load static %}
 
-{% block title %}Books - Local Library{% endblock %}
+{% block title %}Borrowed Books - Local Library{% endblock %}
 
 {% block body %}
-    {% block pagination %}
-        {% if is_paginated %}
+
+    <div class="alert alert-primary" role="alert">
+        These are list of books that are borrowed.
+    </div>
+    <table class="table">
+
+        <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Complete details of books borrowed.</th>
+
+        </tr>
+        </thead>
+        {% block pagination %}
+
             <nav class="mt-3" aria-label="Page navigation example">
                 <ul class="pagination pagination-sm justify-content-center">
                     <li class="page-item">
                         {% if page_obj.has_previous %}
-                            <a class="page-link" href="{{ request.path }}?page={{ page_obj.previous_page_number }}"
+                            <a class="page-link"
+                               href="{{ request.path }}?page={{ page_obj.previous_page_number }}"
                                aria-label="Previous">
                                 <span aria-hidden="true">&laquo;</span>
                             </a>
@@ -38,24 +52,21 @@
                     </li>
                 </ul>
             </nav>
-        {% endif %}
-    {% endblock %}
+        {% endblock %}
 
-    <div class="alert alert-primary" role="alert">
-        These are {{ total_books_demo }} number of books.
-    </div>
-    <table class="table">
-        <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">Title of the book</th>
-        </tr>
-        </thead>
         <tbody>
-        {% for book in book_instance %}
+        {% for book in borrowed %}
             <tr>
                 <th scope="row">-</th>
-                <td><a href="{{ book.get_absolute_url }}">{{ book.title }}</a><br> - By: {{ book.author }}
+                <td>
+                    <a href="{% url 'book-detail' book.book.pk %}">{{ book.book.title }}</a><br>
+                    <span style="font-size: 14px">Due date: {{ book.due_back }}
+
+                        {% if user.is_staff %}
+                            - (<a style="font-size: 15px" href="{% url 'renew-book-librarian' book.id %}">Renew</a>)
+                        {% endif %}
+                    </span>
+                    <p>- By: {{ book.borrower }}</p>
                 </td>
             </tr>
         {% endfor %}
