--- a/templates/catalog/index.html
+++ b/templates/catalog/index.html
@@ -13,7 +13,7 @@
         <tr>
             <th scope="col">#</th>
             <th scope="col">Book name(s)</th>
-            <th scope="col">Availibility</th>
+            <th scope="col">Availability</th>
         </tr>
         </thead>
         <tbody>
