--- a/templates/catalog/base.html
+++ b/templates/catalog/base.html
@@ -58,9 +58,11 @@
                 <tr>
                     <td><a href="{% url 'authors' %}">All authors</a></td>
                 </tr>
+                {% if user.is_staff %}
                 <tr>
                     <td><a href="{% url 'all-borrowers' %}">Borrowers</a></td>
                 </tr>
+                {% endif %}
 
                 {% if not user.is_authenticated %}
                     <tr>
@@ -70,6 +72,8 @@
                     <tr>
                         <td><a href="{% url 'login' %}"><span style="color: green">{{ user.username|capfirst }}</span></a><br>
                          <li><a style="font-size: 16px" href="#">Profile</a></li>
+                         <li><a style="font-size: 16px" href="{% url 'my-borrowed' %}">My borrowed</a></li>
+                         <li><a style="font-size: 16px" href="{% url 'all-borrowers' %}">Other borrowers</a></li>
                          <li><a style="font-size: 16px" href="{% url 'logout' %}">Logout</a></li></td>
                     </tr>
                 {% endif %}
